--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "start-client": "node mqttclient.js"
+    "start-client": "node mqttclient.js",
+    "test": "mocha src/tests"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,12 @@
   "dependencies": {
     "axios": "^0.26.1",
     "body-parser": "^1.20.0",
+    "chai": "^4.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "fs": "0.0.1-security",
+    "mocha": "^9.2.2",
     "mqtt": "^4.3.7",
     "nodemon": "^2.0.15"
   }
